Sec6-Chap59-Create Coupon-NOK: secured some urls, added a form,controller handler and a test.

--- a/couponservice/src/main/resources/templates/createCoupon.html
+++ b/couponservice/src/main/resources/templates/createCoupon.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Create Coupon</title>
 </head>
-<h2>Create Coupon</h2>
 <body>
-<form>
+<h2>Create Coupon</h2>
+<form action="/saveCoupon" method="post">
   Code:<input name="code">
   Discount:<input name="discount">
   Expiry Date:<input name="expDate">
