--- a/couponservice/src/main/resources/templates/couponDetails.html
+++ b/couponservice/src/main/resources/templates/couponDetails.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Coupon Details</title>
 </head>
 <body>
-    <h2>Coupon Details</h2>
-
+<h2>Coupon Details</h2>
+Code:<b th:text="${coupon.code}">Coupon Code</b><br>
+Discount:<b th:text="${coupon.discount}">Coupon Discount</b><br>
+Expiry Date:<b th:text="${coupon.expDate}">Coupon Expiry Date</b><br>
+<a href="/">Go to index</a>
 </body>
 </html>
