Sect6_Chap56-Create the View and Controller: fixed the misbehaviour of the page

--- a/couponservice/src/main/resources/templates/login.html
+++ b/couponservice/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <h2>Login:</h2>
 <form action="#" th:action="@{/login}" method="post">
 <pre>
-User Name:<input type="text" name="email"/>
+User Name:<input type="text" name="username"/>
 Password:<input type="password" name="password"/>
 <input type="submit" value="login"/>
  <a href="showReg">Register</a>
